[project]
name = "caden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chz>=0.4.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.2",
    "wandb>=0.24.1",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.10.0",
]
